# recommendation-system

./: .copier-answers.yml  .env.template  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: test-suite.yml
recommendation_system/: __init__.py
recommendation_system/config/: rules_cleaning.yaml
recommendation_system/metrics/: precision.py  protocols.py
recommendation_system/networks/interfaces/: ranking.py  retreival.py
recommendation_system/pipelines/: evaluation_pipeline 2.py  recommender_pipeline.py  retrieval_ranking.py
recommendation_system/recommenders/: base_recommender.py  content_based.py  graph_recommender.py  matrix_factorization.py  protocols.py
recommendation_system/schemas/: inference.py
recommendation_system/tracking/: logger.py
recommendation_system/utils/: data_cleaning.py  data_loaders.py  determinism.py  enums.py  env.py  logger.py  metrics.py  metrics_2.py  raking.py  retrieval.py  visualization_metrics.py
scripts/: gen_ref_pages.py  recommendation_trial.py
